<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="android.text.TextUtils"/>

        <variable
            name="entity"
            type="com.app.model.UserEntity"/>
    </data>

    <androidx.cardview.widget.CardView
        style="@style/MatchWidth"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_margin="@dimen/dimen_10dp"
        app:cardElevation="@dimen/dimen_8dp"
        app:cardCornerRadius="@dimen/dimen_8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/MatchWidth"
            android:layout_margin="@dimen/dimen_10dp">

            <TextView
                android:id="@+id/tv_user_id"
                style="@style/WrapWidthHeight"
                android:textSize="@dimen/text_size_14sp"
                android:visibility="@{entity.userId == 0.0 ? View.GONE : View.VISIBLE}"
                android:text="@{@string/text_user_id+` : ` + entity.userId}"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/WrapWidthHeight"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textSize="@dimen/text_size_14sp"
                android:visibility="@{TextUtils.isEmpty(entity.userName) ? View.GONE : View.VISIBLE}"
                android:text="@{@string/text_user_name+` : ` + entity.userName}"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@+id/tv_user_id"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_id"
                app:layout_constraintVertical_chainStyle="packed"/>

            <TextView
                android:id="@+id/tv_user_distance"
                style="@style/WrapWidthHeight"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textSize="@dimen/text_size_14sp"
                android:visibility="@{entity.userDistance == 0.0 ? View.GONE : View.VISIBLE}"
                android:text="@{@string/text_user_distance+` : ` + entity.userDistance+`  ` +@string/text_kilometre}"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@+id/tv_user_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                app:layout_constraintVertical_chainStyle="packed"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>